--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li><a href="" class="menu-item link">Contacts</a></li>
           </ul>
         </nav>
-        <button class="mobile-menu-open-btn" type="button">
+        <button class="mobile-menu-open-btn js-open-menu" type="button">
           <svg class="mobile-menu-icon" width="32" height="22">
             <use href="./images/icons.svg#icon-burger"></use>
           </svg>
@@ -65,25 +65,97 @@
 
       <!-- мобільне меню хедера -->
 
-      <div class="mobile-menu">
-        <div class="container">
-          <button type="button" class="mobile-modal-btn">
-            <svg class="backdrop-modal-btn-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-close-btn"></use>
+      <div class="mobile-menu js-menu-container">
+        <div class="mobile-menu-container container is-open">
+          <button type="button" class="mobile-menu-close-btn js-close-menu">
+            <svg class="mobile-menu-close-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-close-mobile"></use>
             </svg>
           </button>
+          <ul class="mobile-menu-list list">
+            <li>
+              <a href="./index.html" class="mobile-menu-item link current"
+                >Studio</a
+              >
+            </li>
+            <li>
+              <a href="./portfolio.html" class="mobile-menu-item link"
+                >Portfolio</a
+              >
+            </li>
+            <li>
+              <a href="" class="mobile-menu-item link">Contacts</a>
+            </li>
+          </ul>
+
+          <ul class="mobile-menu-tel-mail list">
+            <li>
+              <a class="mobile-menu-tel link list" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li>
+              <a
+                class="mobile-menu-link link list"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+          <div class="mobile-media">
+            <ul class="footer-social-list list">
+              <li class="footer-social-list-item">
+                <a href="" class="footer-social-list-link">
+                  <svg
+                    class="social-list-icon"
+                    width="24"
+                    height="24"
+                    aria-label="icon of instagram"
+                  >
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="footer-social-list-item">
+                <a href="" class="footer-social-list-link">
+                  <svg
+                    class="social-list-icon"
+                    width="24"
+                    height="24"
+                    aria-label="icon of instagram"
+                  >
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-list-item">
+                <a href="" class="footer-social-list-link">
+                  <svg
+                    class="social-list-icon"
+                    width="24"
+                    height="24"
+                    aria-label="icon of instagram"
+                  >
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-list-item">
+                <a href="" class="footer-social-list-link">
+                  <svg
+                    class="social-list-icon"
+                    width="24"
+                    height="24"
+                    aria-label="icon of instagram"
+                  >
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <ul class="menu list list-header-container">
-          <li>
-            <a href="./index.html" class="menu-item link current-page"
-              >Studio</a
-            >
-          </li>
-          <li>
-            <a href="./portfolio.html" class="menu-item link">Portfolio</a>
-          </li>
-          <li><a href="" class="menu-item link">Contacts</a></li>
-        </ul>
       </div>
     </header>
     <!-- <main> -->
@@ -773,5 +845,6 @@
       </div>
     </div> -->
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
