--- a/index.html
+++ b/index.html
@@ -87,25 +87,25 @@
               <a href="" class="mobile-menu-item link">Contacts</a>
             </li>
           </ul>
-
-          <ul class="mobile-menu-tel-mail list">
-            <li>
-              <a class="mobile-menu-tel link list" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-            <li>
-              <a
-                class="mobile-menu-link link list"
-                href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-          </ul>
           <div class="mobile-media">
-            <ul class="footer-social-list list">
-              <li class="footer-social-list-item">
-                <a href="" class="footer-social-list-link">
+            <ul class="mobile-menu-tel-mail list">
+              <li>
+                <a class="mobile-menu-tel link list" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li>
+                <a
+                  class="mobile-menu-link link list"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+
+            <ul class="mobile-social-list list">
+              <li class="mobile-social-list-item">
+                <a href="" class="mobile-social-list-link">
                   <svg
                     class="social-list-icon"
                     width="24"
@@ -117,8 +117,8 @@
                 </a>
               </li>
 
-              <li class="footer-social-list-item">
-                <a href="" class="footer-social-list-link">
+              <li class="mobile-social-list-item">
+                <a href="" class="mobile-social-list-link">
                   <svg
                     class="social-list-icon"
                     width="24"
@@ -129,8 +129,8 @@
                   </svg>
                 </a>
               </li>
-              <li class="footer-social-list-item">
-                <a href="" class="footer-social-list-link">
+              <li class="mobile-social-list-item">
+                <a href="" class="mobile-social-list-link">
                   <svg
                     class="social-list-icon"
                     width="24"
@@ -141,8 +141,8 @@
                   </svg>
                 </a>
               </li>
-              <li class="footer-social-list-item">
-                <a href="" class="footer-social-list-link">
+              <li class="mobile-social-list-item">
+                <a href="" class="mobile-social-list-link">
                   <svg
                     class="social-list-icon"
                     width="24"
@@ -158,20 +158,20 @@
         </div>
       </div>
     </header>
-    <!-- <main> -->
-    <!-- SECTION 1 - HERO -->
-    <!-- <section class="section-hero">
+    <main>
+      <!-- SECTION 1 - HERO -->
+      <section class="section-hero">
         <div class="container section-hero-container">
           <h1 class="hero-tittle">Effective Solutions for Your Business</h1>
           <button class="modal-open-btn" type="button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
 
-    <!-- SECTION 2 -->
+      <!-- SECTION 2 -->
 
-    <!-- <section class="features-section">
+      <!-- <section class="features-section">
         <div class="features-list-container container">
           <h2 class="visually-hidden">webstudio-features</h2>
 
@@ -229,9 +229,9 @@
         </div>
       </section> -->
 
-    <!-- section 3 -->
+      <!-- section 3 -->
 
-    <!-- <section class="main-page-fotos">
+      <!-- <section class="main-page-fotos">
         <div class="container main-page-container">
           <h2 class="section-name section-foto-name">What are we doing</h2>
           <ul class="list fotos-list-container">
@@ -263,9 +263,9 @@
         </div>
       </section> -->
 
-    <!-- section 4 -->
+      <!-- section 4 -->
 
-    <!-- <section class="section-team">
+      <!-- <section class="section-team">
         <div class="container">
           <h2 class="section-team-name section-name">Our Team</h2>
           <ul class="list section-team-container">
@@ -529,9 +529,9 @@
         </div>
       </section> -->
 
-    <!-- SECTION 5 -->
+      <!-- SECTION 5 -->
 
-    <!-- <section class="section-customers">
+      <!-- <section class="section-customers">
         <div class="container">
           <h2 class="section-name">Customers</h2>
           <ul class="customers-list list">
@@ -613,8 +613,9 @@
             </li>
           </ul>
         </div>
-      </section>
-    </main> -->
+      </section> -->
+    </main>
+
     <!-- FOOTER -->
     <!-- <footer class="main-footer">
       <div class="container main-footer-container">
