--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
     </header>
     <main>
       <!-- SECTION 1 - HERO -->
-      <section class="section-hero">
-        <div class="container section-hero-container">
+      <section class="container section-hero">
+        <div class="section-hero-container">
           <h1 class="hero-tittle">Effective Solutions for Your Business</h1>
           <button class="modal-open-btn" type="button" data-modal-open>
             Order Service
@@ -171,7 +171,7 @@
 
       <!-- SECTION 2 -->
 
-      <!-- <section class="features-section">
+      <section class="features-section">
         <div class="features-list-container container">
           <h2 class="visually-hidden">webstudio-features</h2>
 
@@ -227,11 +227,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- section 3 -->
 
-      <!-- <section class="main-page-fotos">
+      <section class="main-page-fotos">
         <div class="container main-page-container">
           <h2 class="section-name section-foto-name">What are we doing</h2>
           <ul class="list fotos-list-container">
@@ -261,7 +261,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- section 4 -->
 
