--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
       <!-- section 4 -->
 
-      <!-- <section class="section-team">
+      <section class="section-team">
         <div class="container">
           <h2 class="section-team-name section-name">Our Team</h2>
           <ul class="list section-team-container">
@@ -527,11 +527,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- SECTION 5 -->
 
-      <!-- <section class="section-customers">
+      <section class="section-customers">
         <div class="container">
           <h2 class="section-name">Customers</h2>
           <ul class="customers-list list">
@@ -613,11 +613,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- FOOTER -->
-    <!-- <footer class="main-footer">
+    <footer class="main-footer">
       <div class="container main-footer-container">
         <div class="footer-container">
           <a class="logo link footer-link" href="./index.html"
@@ -709,7 +709,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- МОДАЛЬНЕ ВІКНО -->
     <!-- <div class="backdrop is-hidden" data-modal>
