--- a/index.html
+++ b/index.html
@@ -712,16 +712,16 @@
     </footer>
 
     <!-- МОДАЛЬНЕ ВІКНО -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button data-modal-close type="button" class="backdrop-modal-btn">
           <svg class="backdrop-modal-btn-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close-btn"></use>
           </svg>
-        </button> -->
+        </button>
 
-    <!-- модальна форма NAME PHONE EMAIL-->
-    <!-- <p class="contact-form-header">
+        <!-- модальна форма NAME PHONE EMAIL-->
+        <p class="contact-form-header">
           Leave your contacts and we will call you back
         </p>
         <form class="contact-form-wrapper">
@@ -793,11 +793,11 @@
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
-          </div> -->
+          </div>
 
-    <!-- модальна форма COMMENT-->
+          <!-- модальна форма COMMENT-->
 
-    <!-- <div class="comment-wrapper">
+          <div class="comment-wrapper">
             <label class="contact-form-field-wrapper" for="user-comment">
               Comment
             </label>
@@ -807,11 +807,11 @@
               id="user-comment"
               placeholder="Text input"
             ></textarea>
-          </div> -->
+          </div>
 
-    <!--------  Privacy Policy-------->
+          <!--------  Privacy Policy-------->
 
-    <!-- <div class="policy-agreement-wrapper">
+          <div class="policy-agreement-wrapper">
             <input
               class="agreement-checkbox visually-hidden"
               type="checkbox"
@@ -837,14 +837,14 @@
               I accept the terms and conditions of the
               <a class="privacy-policy-link" href="">Privacy Policy</a>
             </label>
-          </div> -->
+          </div>
 
-    <!------------ SUBMIT BUTTON ----------->
+          <!------------ SUBMIT BUTTON ----------->
 
-    <!-- <button type="submit" class="form-submit-btn">Send</button>
+          <button type="submit" class="form-submit-btn">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
   </body>
