--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
           <ul class="list fotos-list-container">
             <li class="foto-list">
               <img
+                srcset="./images/foto1@2x.jpg 2x"
                 src="./images/foto1.jpg"
                 alt="foto of computer"
                 width="360"
@@ -245,6 +246,7 @@
             </li>
             <li class="foto-list">
               <img
+                srcset="./images/foto2@2x.jpg 2x"
                 src="./images/foto2.jpg"
                 alt="foto of telephone"
                 width="360"
@@ -253,6 +255,7 @@
             </li>
             <li class="foto-list">
               <img
+                srcset="./images/foto3@2x.jpg 2x"
                 src="./images/foto3.jpg"
                 alt="foto of telephone and notebook"
                 width="360"
@@ -271,6 +274,7 @@
           <ul class="list section-team-container">
             <li class="section-list-item">
               <img
+                srcset="./images/mark@2x.jpg 2x"
                 src="./images/mark.jpg"
                 alt="Mark Guerrero foto"
                 width="264"
@@ -336,6 +340,7 @@
 
             <li class="section-list-item">
               <img
+                srcset="./images/tom@2x.jpg 2x"
                 src="./images/tom.jpg"
                 alt="Tom Ford foto"
                 width="264"
@@ -400,6 +405,7 @@
 
             <li class="section-list-item">
               <img
+                srcset="./images/camila@2x.jpg 2x"
                 src="./images/camila.jpg"
                 alt="Camila Garcia foto"
                 width="264"
@@ -464,6 +470,7 @@
 
             <li class="section-list-item">
               <img
+                srcset="./images/daniel@2x.jpg 2x"
                 src="./images/daniel.jpg"
                 alt="Daniel Wilson foto"
                 width="264"
