--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header class="page-header">
       <div class="container page-header-container">
         <nav class="page-nav nav-header-container">
-          <a class="logo link" href="./index.html"
+          <a class="logo link logo-header" href="./index.html"
             >WEB<span class="logo-studio">Studio</span></a
           >
 
@@ -539,7 +539,7 @@
       <!-- SECTION 5 -->
 
       <section class="section-customers">
-        <div class="container">
+        <div class="container customers-container">
           <h2 class="section-name">Customers</h2>
           <ul class="customers-list list">
             <li class="customers-list-item">
